# Kosh_Stellar_MVP

kosh/: API_REFERENCE.md  Cargo.toml  README.md  STELLAR_SWAP_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TRUSTLINE_TOKEN_GUIDE.md  canister_ids.json  dfx.json  kosh_backend.did  package-lock.json  package.json
kosh/.dfx/local/: canister_ids.json  network-id
kosh/.dfx/local/lsp/: rdmx6-jaaaa-aaaaa-aaadq-cai.did
kosh/src/: kosh_backend.did
kosh/src/kosh_backend/: Cargo.toml  kosh_backend.did
kosh/src/kosh_backend/src/: eth.rs  evm_indexer.rs  evm_rpc_bindings.rs  lib.rs  lib_broken.rs  lib_clean.rs  stellar_indexer.rs
kosh/src/kosh_frontend/: .ic-assets.json5  background.js  build-extension.js  content.js  index.html  manifest.json  package.json  popup.html  popup.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
stellar-wallet-frontend/: .env.example  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stellar-wallet-frontend/public/: _redirects
stellar-wallet-frontend/src/: App.tsx  index.css
stellar-wallet-frontend/src/components/: AIStakingCard.tsx  ActionButtons.tsx  AddressDisplay.tsx  BalanceDisplay.tsx  SendTransaction.tsx  SwapComponent.tsx  TokenBalances.tsx  TrustlineManager.tsx  WalletHeader.tsx
stellar-wallet-frontend/src/hooks/: use-toast.ts  useAuth.ts
stellar-wallet-frontend/src/lib/: actor.ts  bridgeService.ts  stellarApi.ts
stellar-wallet-frontend/src/pages/: LoginPage.tsx  WalletPage.tsx
stellar-wallet-frontend/src/types/: backend.ts
(+63 files in other folders)
