[package]
name = "kosh_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
once_cell = "1.19"
sha3 = "0.10.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
base32 = "0.4"
num-traits = "0.2"
crc16 = "0.4"
stellar-xdr = { version = "22.0.0", features = ["curr"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
url = "2.4"
ethers-core = "2.0.1"
ethabi = "18.0"
getrandom = { version = "0.2", features = ["custom"] }
serde_bytes = "0.11"